Bug 903374 - Backport parts of bug 869696 to v1.1.0hd to fix black screen when scrolling in Browser when zoomed. r=bjacob, a=hd+