gfx/gl/GLContext.h
@@ -732,6 +732,7 @@ public:
     enum {
         RendererAdreno200,
         RendererAdreno205,
+        RendererAdrenoTM205,
         RendererSGX530,
         RendererSGX540,
         RendererOther
